modified menu sizing and fixed skills and contacts text-align center

--- a/resources/style.css
+++ b/resources/style.css
@@ -7,8 +7,11 @@ html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
 article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}
 audio,canvas,progress,video{display:inline-block}progress{vertical-align:baseline}
 audio:not([controls]){display:none;height:0}[hidden],template{display:none}
-a{background-color:transparent;-webkit-text-decoration-skip:objects}
-a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}
+
+/* a{background-color:transparent;-webkit-text-decoration-skip:objects}
+a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted} */
+
+
 dfn{font-style:italic}mark{background:#ff0;color:#000}
 small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
 sub{bottom:-0.25em}sup{top:-0.5em}figure{margin:1em 40px}img{border-style:none}svg:not(:root){overflow:hidden}
@@ -248,24 +251,14 @@ body{
    right: 0;
    z-index: 3;
    background-color: white ;
+   text-align: center;
 }
 
-.top-menu-container{
-   margin:auto; 
-   width: 100%;
-   height: 100%;
-
-     /* display:flex;
-     flex-flow: row nowrap;
-   background-color: inherit;
-   justify-content: center; */
-}
 
 .button_{
 
-   width:10%;
+   width:20%;
    height:20px;
-   margin:auto; 
    padding: 0px 5%;
 
    border:none;
@@ -275,10 +268,19 @@ body{
    text-decoration:none;
    color:inherit;
    background-color:inherit;
-   text-align:center;
+   text-align:left;
    cursor:pointer;
    white-space:nowrap;
    
+}
+
+a{
+   padding-left: 0;
+   font-size: 75%;
+}
+
+#my-projects{
+   padding-top:40px;
 }
 
 
